Adding updates from draft 2 sme review

--- a/stories/topics/con-saas-backup-and-diaster-recovery.adoc
+++ b/stories/topics/con-saas-backup-and-diaster-recovery.adoc
@@ -9,7 +9,7 @@ Red{nbsp}Hat maintains daily database and file system snapshots in a separate re
 | File System | Daily              | 7 days
 |===
 
-This recovery data is used in the event that it becomes unlikely that an AWS regional outage will be recoverable within a reasonable period. 
+This recovery data is used in the event that it becomes unlikely that an AWS regional outage is recoverable within a reasonable period. 
 In the event of such a circumstance, the following process may be followed to recover an {PlatformNameShort} deployment in a different AWS region:
 
 * *Add Steps*
