--- a/stories/topics/con-saas-customer-access.adoc
+++ b/stories/topics/con-saas-customer-access.adoc
@@ -12,4 +12,4 @@ An initial password for the administrator account is provided to the HCC user th
 ====
 Change this password immediately after logging into {PlatformNameShort} for the first time.
 ====
-If you require assistance accessing your deployment, you can submit a support request.
+If you require assistance accessing your deployment, you can submit a support request through the link:https://access.redhat.com/support[Red Hat Customer Portal].
