--- a/stories/topics/con-saas-monitoring.adoc
+++ b/stories/topics/con-saas-monitoring.adoc
@@ -5,5 +5,5 @@
 You can configure execution plane monitoring and hardening tools of choice on the execution plane. 
 You are responsible for the operation, functionality, and maintenance of those monitoring tools to ensure that they do not interfere with the operation of the execution plane.  
 
-Any additional workloads running on the execution plane will require additional resources from the virtual machines or OpenShift clusters on which the tools are deployed. 
+Any additional workloads running on the execution plane require additional resources from the virtual machines or OpenShift clusters on which the tools are deployed. 
 Be sure to take appropriate steps to size resources to account for the additional resources required by these tools.
