--- a/stories/topics/ref-saas-egress-model.adoc
+++ b/stories/topics/ref-saas-egress-model.adoc
@@ -4,5 +4,5 @@
 Remote automation mesh nodes can poll the {PlatformNameShort} without needing to open ingress ports through the firewall, using a 'polling' or 'pull' model. 
 This model eliminates the need to have hop nodes from your DMZ to private networks if private networks have outbound internet connectivity.
 
-.Figure 1. Egress model
+.Figure 3.1.1 Egress model
 image:Egress.png[Egress model] 
