--- a/titles/saas-aws/master.adoc
+++ b/titles/saas-aws/master.adoc
@@ -10,5 +10,7 @@ include::title-attributes.adoc[]
 [id="{ProjectNameID}-{context}"]
 = Red Hat Ansible Automation Platform Service on AWS
 
+This document outlines the service definition and set up  for {SaaSonAWS}.
+
 include::stories.adoc[]
 
