--- a/stories/assembly-saas-set-up.adoc
+++ b/stories/assembly-saas-set-up.adoc
@@ -4,14 +4,9 @@ ifdef::context[:parent-context: {context}]
 [id="saas-set-up"]
 = Setting up {SaaSonAWS}
 
-{SaaSonAWS} users have access to {PlatformNameShort} without the need to manage the infrastructure. 
-
-To set up {SaaSonAWS} you must link your {AWS} (AWS) and Red Hat accounts through the AWS marketplace.
-When you link your accounts you can configure your cluster through the *Provision environment* page on the Red Hat Hybrid Cloud Console.  
-
-.Prerequisites
-* An AWS Account
-
+include::topics/con-saas-automation.adoc[leveloffset=+1]
+include::topics/ref-saas-egress-model.adoc[leveloffset=+2]
+include::topics/ref-saas-mesh-ingress-model.adoc[leveloffset=+2]
 include::topics/proc-saas-set-up-public.adoc[leveloffset=+1]
 include::topics/proc-saas-set-up-private.adoc[leveloffset=+1]
 
