--- a/stories/topics/con-saas-automation.adoc
+++ b/stories/topics/con-saas-automation.adoc
@@ -1,15 +1,12 @@
 [id="con-saas-automation"]
 = Automation using the {SaaSonAWS} control plane 
 
-The control plane is the command center to run your automation. 
-However, before you can begin automation, you need to configure the control plane to reach the execution nodes.
+The control plane {ControllerName} is the command center to run automation. 
+However, before automation can begin, the control plane must be configured to reach the execution nodes.
 The nature of the hosted control plane and remote execution plane requires traffic over networks to be set up securely. 
 {SaaSonAWSShort} implements a service architecture based on industry standard communication protocols and modern encryption algorithms to ensure that traffic between the control plane is secure.
 
-There are two ways to configure:
+There are two ways to configure the communication between control nodes and execution nodes:
 
 * Mesh ingress
 * Self-managed hop nodes (egress model)
-
-You can connect the execution nodes through an egress model from your environment using mesh ingress. 
-Alternatively, the mesh ingress configuration available within the controller sets up hop nodes which can be peered to the execution nodes.
