AAP-29295-B updated OCP arch

--- a/downstream/modules/platform/ref-example-OCP-architecture.adoc
+++ b/downstream/modules/platform/ref-example-OCP-architecture.adoc
@@ -5,4 +5,4 @@
 The following reference architecture provides an example setup of an enterprise deployment of {PlatformNameShort} on {OCPShort}.
 
 .Example enterprise Operator-based deployment architecture
-image::OCP_B_Env_A.png[Reference architecture for an example setup of an enterprise Operator-based {PlatformNameShort} deployment]
+image::ocp-b-env-a.png[Reference architecture for an example setup of an enterprise Operator-based {PlatformNameShort} deployment]
