AAP-26519-C updated abstract

--- a/downstream/titles/analytics/master.adoc
+++ b/downstream/titles/analytics/master.adoc
@@ -10,7 +10,7 @@ include::attributes/attributes.adoc[]
 // Book Title
 = Using automation analytics
 
-This guide provides recommended practices for various processes needed to install, configure, and maintain {PlatformNameShort} on Red Hat Enterprise Linux in a secure manner.
+This guide shows how to use the features of automation analytics to evaluate how automation is deployed across your environments and the savings associated with it.
 
 // Downstream content only
 include::{Boilerplate}[]
