--- a/downstream/modules/builder/proc-customize-ee-image.adoc
+++ b/downstream/modules/builder/proc-customize-ee-image.adoc
@@ -40,7 +40,7 @@ collections:
 version: 3
 
 images:
-  base_image: 'registry.redhat.io/ansible-automation-platform-24/ee-minimal-rhel9:latest'
+  base_image: 'registry.redhat.io/ansible-automation-platform-25/ee-minimal-rhel9:latest'
 
 dependencies:
   galaxy:
@@ -91,7 +91,7 @@ $ podman tag [username]/new-ee [automation-hub-IP-address]/[username]/new-ee
 +
 [NOTE]
 =====
-You must have `admin` or appropriate container repository permissions for {HubName} to push a container. For more information, see the _Manage containers in {PrivateHubName}_ section in link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/managing_content_in_automation_hub/index#managing-containers-hub[Managing content in automation hub].
+You must have `admin` or appropriate container repository permissions for {HubName} to push a container. For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/managing_automation_content/index#managing-containers-hub[Manage containers in private automation hub].
 =====
 +
 -----
