Further edits to EDA-Controller hybrid doc

--- a/downstream/titles/eda-controller/eda-controller-install/master.adoc
+++ b/downstream/titles/eda-controller/eda-controller-install/master.adoc
@@ -22,7 +22,7 @@ This gives you the option to upgrade your {PlatformNameShort} 2.4 cluster to {Pl
 The installs are still two separate installs, in that you manage the {PlatformNameShort} 2.4 cluster with the {PlatformNameShort} 2.4 installer.
 The {EDAName} 2.5 server is managed with the {PlatformNameShort} 2.5 installer.
 
-This guide shows you how to install and configure {EDAName} 1.1 to work with {ControllerName} 4.4 or 4.5 for a Red Hat Package Manager (PM)-based installation. 
+This guide shows you how to install and configure {EDAName} 1.1 to work with {ControllerName} 4.4 or 4.5 for a Red Hat Package Manager (RPM)-based installation. 
 
 include::{Boilerplate}[]
 
