--- a/downstream/assemblies/platform/assembly-RPM-eda-controller-install.adoc
+++ b/downstream/assemblies/platform/assembly-RPM-eda-controller-install.adoc
@@ -2,7 +2,7 @@
 
 = Red Hat Package Manager-based installation
 
-If you have an existing {PlatformNameShort} 2.4 Red Hat Package Manager (RPM)-based installation of {ControllerName} (4.4 or 4.5), you can perform a new installation of {PlatformNameShort} 2.5 which has {EDAcontroller} 1.1 and configure the two installations to work together.
+If you have an existing {PlatformNameShort} 2.4 Red Hat Package Manager (RPM)-based installation of {ControllerName} (4.4 or 4.5), you can perform a new installation of {PlatformNameShort} 2.5, which has {EDAcontroller} 1.1, and configure the two installations to work together.
 
 If you do not have an existing {PlatformNameShort} 2.4 RPM-based installation of {ControllerName}, see the link:{BaseURL}/red_hat_ansible_automation_platform/2.4/html/red_hat_ansible_automation_platform_installation_guide/index[Red Hat Ansible Automation Platform installation guide], ensuring that you use an {PlatformNameShort} 2.4 installer.
 
