--- a/downstream/assemblies/platform/assembly-eda-controller-post-install.adoc
+++ b/downstream/assemblies/platform/assembly-eda-controller-post-install.adoc
@@ -4,4 +4,4 @@
 
 After completing your installation you need to connect Automation Decisions ({EDAcontroller}) to Automation Execution ({ControllerName}) to run rulebook activations successfully. 
 
-To do this for a RPM-based install, follow the steps provided in [ADD LINK TO 2.5 DOC][Setting up a Red Hat Ansible Automation Platform credential].
+To do this for a RPM-based install, follow the steps provided in link:{BaseURL}/red_hat_ansible_automation_platform/2.5/html/using_automation_decisions/eda-set-up-rhaap-credential-type[Setting up a Red Hat Ansible Automation Platform credential].
