Final edits to EDA-Controller hybrid doc for 2.4 (#2047)
* Final edits to EDA-Controller hybrid doc for 2.4

Affects `titles/eda-controller-install`

* Further edits to EDA-Controller hybrid doc

--- a/downstream/titles/eda-controller/eda-controller-install/master.adoc
+++ b/downstream/titles/eda-controller/eda-controller-install/master.adoc
@@ -15,11 +15,18 @@ You can configure a new installation of {EDAcontroller} 1.1 with {ControllerName
 
 Upgrading to {EDAcontroller} 1.1 from an earlier release is unsupported at this time.
 
-This guide shows you how to install and configure Event-Driven Ansible 1.1 to work with automation controller 4.4 or 4.5 for a Virtual Machine (VM)-based installation. 
+This means that you can install a new {EDAcontroller} 2.5 server and configure rulebook activations to execute job templates on an {PlatformNameShort} 2.4 {ControllerName}. 
+With this interoperability support you can retain your existing {PlatformNameShort} 2.4 clusters and add {EDAcontroller} 2.5 to them. 
+This gives you the option to upgrade your {PlatformNameShort} 2.4 cluster to {PlatformNameShort} 2.5 at a date that suits you, whilst giving you all the benefits of {EDAName} 2.5.
+
+The installs are still two separate installs, in that you manage the {PlatformNameShort} 2.4 cluster with the {PlatformNameShort} 2.4 installer.
+The {EDAName} 2.5 server is managed with the {PlatformNameShort} 2.5 installer.
+
+This guide shows you how to install and configure {EDAName} 1.1 to work with {ControllerName} 4.4 or 4.5 for a Red Hat Package Manager (RPM)-based installation. 
 
 include::{Boilerplate}[]
 
 //include::platform/assembly-container-based-install.adoc[leveloffset=+1]
 //include::platform/assembly-operator-eda-controller-install.adoc[leveloffset=+1]
-include::platform/assembly-VM-eda-controller-install.adoc[leveloffset=+1]
+include::platform/assembly-RPM-eda-controller-install.adoc[leveloffset=+1]
 include::platform/assembly-eda-controller-post-install.adoc[leveloffset=+1]
