Update inventory file vars appendix
Updates to the following vars sections:
- ref-controller-variables.adoc
- ref-database-inventory-variables.adoc
- ref-eda-controller-variables.adoc
- ref-gateway-variables.adoc
- ref-general-inventory-variables.adoc
- ref-hub-variables.adoc

Used this [Inventory var diff spreadsheet](https://docs.google.com/spreadsheets/d/1wSZiIoDu-_uRY8l1R1vYQlOG5PPrK4MrP3jla8701KA/edit?gid=413143671#gid=413143671)

Update product docs installer var appendix with 2.5 variables

https://issues.redhat.com/browse/AAP-30775

--- a/downstream/modules/platform/ref-controller-variables.adoc
+++ b/downstream/modules/platform/ref-controller-variables.adoc
@@ -13,7 +13,7 @@ Passwords must be enclosed in quotes when they are provided in plain text in the
 
 Use of special characters for this variable is limited. The password can include any printable ASCII character except `/`, `”`, or `@`.
 
-| *`admin_username`* | `controller_admin_user` | {ControllerNameStart} admin user
+| *`admin_username`* | `controller_admin_user` | {ControllerNameStart} admin user.
 
 Default = `admin`
 
@@ -37,11 +37,15 @@ Default = `63072000` seconds, or two years.
 
 | *`nginx_http_port`* | `controller_nginx_http_port` | The NGINX HTTP server listens for inbound connections.
 
-RPM default = `80`, Container default = `8080`
+RPM default = `80`
+
+Container default = `8080`
 
 | *`nginx_https_port`* | `controller_nginx_https_port` | The NGINX HTTPS server listens for secure connections.
 
-RPM Default = `443`, Container default = `8443`
+RPM Default = `443`
+
+Container default = `8443`
 
 | *`nginx_user_headers`* | `controller_nginx_user_headers` | List of NGINX headers for the {ControllerName} web server.
 
