--- a/downstream/modules/platform/ref-database-inventory-variables.adoc
+++ b/downstream/modules/platform/ref-database-inventory-variables.adoc
@@ -60,7 +60,7 @@ Default = `scram-sha-256`
 
 Default = `false`
 
-| | postgresql_port | PostgreSQL port number.
+| | `postgresql_port` | PostgreSQL port number.
 
 Default = `5432`
 
