--- a/downstream/modules/platform/ref-hub-variables.adoc
+++ b/downstream/modules/platform/ref-hub-variables.adoc
@@ -37,7 +37,7 @@ Default = `false`
 
 By default, both certified and validated content are uploaded.
 
-Possible values of this variable are 'certified' or 'validated'.
+Possible values of this variable are `certified` or `validated`.
 
 If you do not want to install content, set `automationhub_seed_collections` to `false` to disable the seeding.
 
@@ -130,11 +130,11 @@ The `!`, `#`, `0` and `@` characters are supported. Use of other special charact
 
 Default = `5432`
 
-| `automationhub_pg_sslmode` | | Required.
+| `automationhub_pg_sslmode` | | _Required_
 
 Default = `prefer`
 
-| `automationhub_pg_username` | `hub_pg_username` | Required.
+| `automationhub_pg_username` | `hub_pg_username` | _Required_
 
 The username for your {HubName} PostgreSQL database
 
@@ -206,19 +206,19 @@ Default = `false`
 
 |  | `hub_main_url` | {HubNameStart} main URL.
 
-|  | `hub_nginx_client_max_body_size` | Nginx maximum body size. 
+|  | `hub_nginx_client_max_body_size` | NGINX maximum body size. 
 
 Default = `20m`
 
-|  | `hub_nginx_http_port` | Nginx HTTP port. 
+|  | `hub_nginx_http_port` | NGINX HTTP port. 
 
 Default = `8081`
 
-|  | `hub_nginx_https_port` | Nginx HTTPS port. 
+|  | `hub_nginx_https_port` | NGINX HTTPS port. 
 
 Default = `8444`
 
-|  | `hub_nginx_https_protocols` | Nginx HTTPS protocols. 
+|  | `hub_nginx_https_protocols` | NGINX HTTPS protocols. 
 
 Default = `[TLSv1.2, TLSv1.3]`
 
