--- a/downstream/modules/platform/proc-controller-azure-resource-manager.adoc
+++ b/downstream/modules/platform/proc-controller-azure-resource-manager.adoc
@@ -8,14 +8,14 @@ Use the following procedure to configure an {Azure} Resource Manager-sourced inv
 //[ddacosta] Rewrote this according to style for drop-down lists; see Usage and highlighting for interface elements in the IBM Style Guide
 . From the navigation panel, select {MenuInfrastructureInventories}.
 . Select the inventory name you want a source to and click the *Sources* tab.
-. Click btn:[Add source].
-. In the *Add new source* page, select *Microsoft Azure Resource Manager* from the *Source* list.
-. The *Add new source* window expands with the required *Credential* field.
-Choose from an existing Azure Credential.
-For more information, see [Credentials].
+. Click btn:[Create source].
+. In the *Create source* page, select *Microsoft Azure Resource Manager* from the *Source* list.
+. Enter the following details in the additional fields:
+. Optional: *Credential*: Choose from an existing Azure Credential.
+For more information, see xref:controller-credentials[Managing user credentials]..
 
 . Optional: You can specify the verbosity, host filter, enabled variables or values, and update options as described in xref:proc-controller-add-source[Adding a source].
-. Use the *Source Variables* field to override variables used by the `azure_rm` inventory plugin.
+. Use the *Source variables* field to override variables used by the `azure_rm` inventory plugin.
 Enter variables by using either JSON or YAML syntax.
 Use the radio button to toggle between the two.
 For more information about these variables, see the
