--- a/downstream/modules/platform/proc-controller-inv-source-gce.adoc
+++ b/downstream/modules/platform/proc-controller-inv-source-gce.adoc
@@ -7,9 +7,9 @@ Use the following procedure to configure a Google-sourced inventory:
 .Procedure
 . From the navigation panel, select {MenuInfrastructureInventories}.
 . Select the inventory name you want a source to and click the *Sources* tab.
-. Click btn:[Add source]
+. Click btn:[Create source].
 . In the *Add new source* page, select *Google Compute Engine* from the *Source* list.
-. The *Add new source* window expands with the required *Credential* field.
+. The *Create source* window expands with the required *Credential* field.
 Choose from an existing GCE Credential.
 For more information, see [Credentials].
 //+
