--- a/downstream/modules/platform/proc-controller-inv-source-openstack.adoc
+++ b/downstream/modules/platform/proc-controller-inv-source-openstack.adoc
@@ -7,11 +7,13 @@ Use the following procedure to configure an OpenStack-sourced inventory.
 .Procedure
 . From the navigation panel, select {MenuInfrastructureInventories}.
 . Select the inventory name you want a source to and click the *Sources* tab.
-. Click btn:[Add source].
-. In the *Add new source* page, select *OpenStack* from the *Source* list.
-. The *Add new Source* window expands with the required *Credential* field.
-Choose from an existing OpenStack Credential.
-For more information, see [Credentials].
+. Click btn:[Create source].
+. In the *Create source* page, select *OpenStack* from the *Source* list.
+. The *Create source* window expands with additional fields.
+Enter the following details:
+
+* Optional: *Credential*: Choose from an existing OpenStack Credential.
+For more information, see xref:controller-credentials[Managing user credentials].
 . Optional: You can specify the verbosity, host filter, enabled variables or values, and update options as described in xref:proc-controller-add-source[Adding a source].
 . Use the *Source Variables* field to override variables used by the `openstack` inventory plugin.
 Enter variables by using either JSON or YAML syntax.
