--- a/downstream/modules/platform/proc-controller-inv-source-satellite.adoc
+++ b/downstream/modules/platform/proc-controller-inv-source-satellite.adoc
@@ -7,11 +7,13 @@ Use the following procedure to configure a Red Hat Satellite-sourced inventory.
 .Procedure
 . From the navigation panel, select {MenuInfrastructureInventories}.
 . Select the inventory name you want a source to and click the *Sources* tab.
-. Click btn:[Add source].
-. In the *Add new source* page, select *Red Hat Satellite 6* from the *Source* list.
-. The *Add new source* window expands with the required *Credential* field.
-Choose from an existing Satellite Credential.
-For more information, see [Credentials].
+. Click btn:[Create source].
+. In the *Create source* page,, select *Red Hat Satellite 6* from the *Source* list.
+. The *Create source* window expands with additional fields.
+Enter the following details:
+
+* Optional: *Credential*: Choose from an existing Satellite Credential.
+For more information, see xref:controller-credentials[Managing user credentials].
 . Optional: You can specify the verbosity, host filter, enabled variables or values, and update options as described in xref:proc-controller-add-source[Adding a source].
 . Use the *Source Variables* field to specify parameters used by the `foreman` inventory source.
 Enter variables by using either JSON or YAML syntax.
