--- a/downstream/assemblies/hub/assembly-managing-cert-valid-content.adoc
+++ b/downstream/assemblies/hub/assembly-managing-cert-valid-content.adoc
@@ -15,7 +15,8 @@ Red Hat Ansible content contains two types of content:
 
 You can use both {CertifiedName} or {Valid} collections to build your automation library. For more information on the differences between {CertifiedName} and {Valid} collections, see the Knowledgebase article link:https://access.redhat.com/support/articles/ansible-automation-platform-certified-content[{CertifiedName} and {Valid}], or xref:assembly-validated-content[{Valid}] in this guide.
 
-//// 
+// hherbly--removed, see aap-20548  
+////
 Ansible validated collections are available in your {PrivateHubName} through the platform installer.
 When you download {PlatformName} with the bundled installer, validated content is pre-populated into the {PrivateHubName} by default, but only if you enable the {PrivateHubName} as part of the inventory.
 
@@ -26,7 +27,7 @@ For further information, see xref:assembly-validated-content[{Valid}].
 
 You can update these collections manually by downloading their packages.
 
-//hherbly: removing as this is specific to partners, not a general user audience 
+//hherbly: removing as this is specific to partners, not a general user audience. see aap-20548  
 
 [discrete]
 ////
