Add attributes for platform gateway

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -18,6 +18,8 @@
 :OperatorBase: operator-based installation
 :ContainerBase: container-based installation
 :PlatformDashboard: platform dashboard
+:Gateway: platform gateway
+:GatewayStart: Platform gateway
 
 // Event-Driven Ansible
 :EDAName: Event-Driven Ansible
