populates remaining modules for automation operator section

--- a/downstream/modules/platform/con-gs-auto-op-about-inv.adoc
+++ b/downstream/modules/platform/con-gs-auto-op-about-inv.adoc
@@ -2,7 +2,7 @@
 
 = About inventories
 
-An inventory is a file listing the collection of hosts managed by automation controller. 
+An inventory is a file listing the collection of hosts managed by {PlatformNameShort}. 
 Organizations are assigned to inventories, while permissions to launch playbooks against inventories are controlled at the user or team level.
 
 Platform administrators and automation developers have the permissions to create inventories. 
