--- a/downstream/modules/platform/con-gs-automation-execution-jobs.adoc
+++ b/downstream/modules/platform/con-gs-automation-execution-jobs.adoc
@@ -2,4 +2,4 @@
 
 = Automation execution jobs
 
-A job is an instance of {ControllerName} launching an Ansible Playbook against an inventory of hosts.
+A job is an instance of {PlatformNameShort} launching an Ansible Playbook against an inventory of hosts.
