--- a/downstream/modules/platform/proc-gs-auto-op-launch-template.adoc
+++ b/downstream/modules/platform/proc-gs-auto-op-launch-template.adoc
@@ -8,7 +8,13 @@ In addition to the playbooks, the template passes the inventory, credentials, ex
 
 .Procedure
 
-From the navigation panel, select {MenuAETemplates}.
+. From the navigation panel, select {MenuAETemplates}.
+. Select a template to view its details. A default job template is created during your initial setup to help you get started, but you can also create your own. 
+. From the *Templates* page, click the launch icon to run your job template. 
 
-//ADD CONTENT
+The *Templates* list view shows job templates that are currently available. The default view is collapsed (Compact), showing the template name, template type, and the timestamp of the last job that ran using that template. You can click the arrow icon next to each entry to expand and view more information. This list is sorted alphabetically by name, but you can sort by other criteria, or search by various template fields and attributes. 
+
+From this screen you can launch, edit, and copy a job template. 
+
+For more information about templates see the link:{URLControllerUserGuide}/index#controller-job-templates[Job templates] and link:{URLControllerUserGuide}/index#controller-workflow-job-templates[Workflow job templates] sections of the {TitleControllerUserGuide}.
 
