--- a/downstream/modules/platform/proc-gs-auto-op-projects.adoc
+++ b/downstream/modules/platform/proc-gs-auto-op-projects.adoc
@@ -2,11 +2,15 @@
 
 = Automation execution projects
 
-A project is a logical collection of Ansible playbooks, represented in {ControllerName}. 
+A project is a logical collection of Ansible playbooks that you can manage in {PlatformNameShort}. 
 
 Platform administrators and automation developers have the permissions to create projects. 
 As an automation operator you can view and sync projects.
 
-== Executing a project 
+== Viewing project details 
 
-//ADD CONTENT
+The *Projects* page displays a list of projects that are currently available. 
+
+. From the navigation panel, select {MenuAEProjects}.
+. Click a project to view its details.
+. For each project listed, you can sync the latest revision, edit the project, or copy the project's attributes using the icons next to each project. 
