--- a/downstream/modules/platform/proc-gs-auto-op-review-job-output.adoc
+++ b/downstream/modules/platform/proc-gs-auto-op-review-job-output.adoc
@@ -1,11 +1,12 @@
 [id="proc-gs-auto-op-review-job-output"]
 
-= Reviewing a job output
+= Reviewing job output
 
 When you relaunch a job, the jobs *Output* view is displayed. 
  
 .Procedure
 
 . From the navigation panel, select {MenuAEJobs}.
-
-//ADD CONTENT
+. Select a job. This takes you to the *Output* view for that job, where you can filter job output by these criteria:
+* The *Search output* option allows you to search by keyword.
+* The *Event* option enables you to filter by the events of interest, such as errors, host failures, host retries, and items skipped. You can include as many events in the filter as necessary. 
