--- a/downstream/modules/platform/proc-gs-auto-op-review-job-status.adoc
+++ b/downstream/modules/platform/proc-gs-auto-op-review-job-status.adoc
@@ -7,5 +7,11 @@ The *Jobs* list view displays a list of jobs and their statuses, shown as comple
 .Procedure
 
 . From the navigation panel, select {MenuAEJobs}.
++
+The default view is collapsed (Compact) with the job name, status, job type, start, and finish times. You can click the arrow icon to expand and see more information. You can sort this list by various criteria, and perform a search to filter the jobs of interest.
+. From this screen, you can complete the following tasks: 
+* View a job's details and standard output.
+* Relaunch jobs.
+* Remove selected jobs. 
 
-/ADD CONTENT
+The relaunch operation only applies to relaunches of playbook runs and does not apply to project or inventory updates, system jobs, or workflow jobs.
