--- a/downstream/modules/platform/con-gs-auto-op-execute-inv.adoc
+++ b/downstream/modules/platform/con-gs-auto-op-execute-inv.adoc
@@ -6,6 +6,14 @@
 
 . From the navigation panel, select {MenuInfrastructureInventories}. 
 The *Inventories* window displays a list of inventories that are currently available, along with the following information:
+* *Name*: The inventory name.
+* *Status*: The statuses are: 
+** *Success*: The inventory sync completed successfully.
+** *Disabled*: No inventory source added to the inventory.
+** *Error*: The inventory source completed with error.
+* *Type*: Identifies whether the inventory is a standard inventory, a smart inventory, or a constructed inventory. 
+* *Organization*: The organization to which the inventory belongs. 
+. Select an inventory name to display the *Details* page for the inventory, including the inventory's groups and hosts.
 
-//ADD CONTENT
+For more information about inventories, see the link:{URLControllerUserGuide}/index#controller-inventories[Inventories] section of the {TitleControllerUserGuide} guide.
 
