--- a/downstream/assemblies/platform/assembly-gs-auto-dev.adoc
+++ b/downstream/assemblies/platform/assembly-gs-auto-dev.adoc
@@ -46,7 +46,7 @@ include::platform/proc-gs-auto-dev-create-template.adoc[leveloffset=+2]
 include::platform/proc-gs-auto-dev-run-template.adoc[leveloffset=+2]
 include::platform/proc-controller-edit-job-template.adoc[leveloffset=+2]
 include::platform/con-gs-rulebook-activations.adoc[leveloffset=+1]
-//include::eda/proc-eda-set-up-rulebook-activation.adoc[leveloffset=+2]
+include::platform/proc-gs-eda-set-up-rulebook-activation.adoc[leveloffset=+2]
 include::eda/con-eda-rulebook-activation-list-view.adoc[leveloffset=+3]
 include::eda/proc-eda-enable-rulebook-activations.adoc[leveloffset=+2]
 include::eda/proc-eda-restart-rulebook-activations.adoc[leveloffset=+2]
